# proto-builder-trait

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  deny.toml
.github/workflows/: build.yml
fixtures/protos/: todo.proto
src/: lib.rs  prost.rs  tonic.rs  utils.rs
