[package]
name = "proto-builder-trait"
version = "0.6.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/proto-builder-trait"
repository = "https://github.com/tyrchen/proto-builder-trait"
homepage = "https://github.com/tyrchen/proto-builder-trait"
description = """
Builder tools for easily adding attributes for prost-build/tonic-build generated code. serde/sqlx/derive_builder are supported.
"""
readme = "README.md"
keywords = ["prost", "tonic", "build"]
categories = ["development-tools"]

[features]
default = ["tonic", "prost"]
tonic = ["tonic-build"]
prost = ["prost-build"]

[dependencies]
prost-build = { version = "0.13.2", optional = true }
tonic-build = { version = "0.12.2", optional = true }

[dev-dependencies]
insta = "1.34.0"
tempfile = "3.10.1"
